# LearnOpenGL

./: CMakeLists.txt  README.md  imgui.ini
config/: DefaultSettings.h.in  pathSettings.h.in
error/: GLSL的shaderSource中换行符.md  VS2019着色器报错.md  VS报错 明显调用的表达式前的括号必须具有(指针)函数类型的一种.md  【VS报错】明显调用的表达式前的括号必须具有(指针)函数类型的一种.md  【未解决】模型旋转，光源不旋转时，模型上光照效果不正确.md  无【shader报错】路径读取问题.md  配置Assimp
error/LearnOpenGL/: 【glad报错】OpenGL header already included.md  【opengl报错】texture加载、着色器gl_Position访问问题.md  【未解决】模型旋转，光源不旋转时，模型上光照效果不正确.md  添加顶点颜色属性.md
error/Others/: 【opencv报错】imread can't open or read file check file path or integrity.md  【opencv报错】undefined reference to cv imread().md
error/VS/: 【VS报错】明显调用的表达式前的括号必须具有(指针)函数类型的一种.md  【配置过程】配置Assimp无法生成解决方案.md
error/VSCode/: 【VSCode路径问题】利用预定义宏.md
error/opengl/: 【异常-ImGUI】控件点击无反应.md  添加顶点颜色属性.md
include/DefaultSettings/: DefaultSettings.h
include/glad/: glad.c  glad.h
include/tools/: camera.h  folder_relative_path.h  mesh.h  model.h  my_camera.h  my_window.h  pathSettings.h  shader.h
libs/: VSCode+MSYS配置GLAD和GLFW.md  变换 Transformations.md  着色器 Shaders.md
notes/: 01-入门.md  4-4-face_culling.md  Hello-Triangle.md  图形学渲染管线.md  标准化设备坐标 NDC.md  着色器 Shaders.md
notes/00 配置OpenGL环境/: VS2019配置GLAD和GLFW.md
notes/01 入门/: 01-入门.md  坐标系统 Coordinate Systems.md
notes/04 高级OpenGL/: 04-高级OpenGL.md  4-10 实例化.md  4-11 抗锯齿.md  4-6 高级立方体贴图.md
notes/05 高级光照/5-1 高级光照 Blinn-Phong/: readme.md
notes/05 高级光照/5-2 Gamma矫正/: Gamma矫正.md  README.md
notes/05 高级光照/5-3 阴影/: 5-3-1 阴影映射.md  5-3-2 点光源阴影.md
notes/05 高级光照/5-4 法线贴图/: README.md
notes/05 高级光照/5-5 视差贴图/: README.md
notes/old-notes/: 坐标系统 Coordinate Systems.md  着色器 Shaders.md  纹理 Texture.md
src/0-0-Template/: mian.cpp
src/00-basic-code/: CMakeLists.txt
src/01-hello-window/: CMakeLists.txt  main.cpp
src/02-hello-triangle/: 02-hello-triangle 练习题.md
src/03-hello-shaders/: 03-hello-shaders 练习题.md
src/04-hello-texture/: 04-hello-texture 练习题.md
src/05-hello-transformation/: 05-hello-transformation.md  CMakeLists.txt
src/05-hello-transformation/shaders/: fs.glsl  vs.glsl
src/05-hello-transformation/src/: main.cpp
src/06-hello-coordiante/: CMakeLists.txt
src/07-hello-camera/: CMakeLists.txt
src/08-hello-color/: CMakeLists.txt
src/09-hello-lighting/: CMakeLists.txt
src/1-4-triangles/: main.cpp
src/1-5-shader/: main.cpp
src/1-6-texture/: main.cpp
src/1-7-transformation/: main.cpp
src/1-8-coordinate/: main.cpp
src/1-9-camera/: main.cpp
src/10-hello-material/: CMakeLists.txt
src/2-1-light_color/: main.cpp
src/2-2-basic_lighting/: main.cpp
src/2-4-lighting_maps/: main.cpp
src/2-5-light_casting/: main.cpp
src/2-6-multiple_light/: main.cpp
src/3-2-mesh/: main.cpp
src/3-3-model/: main.cpp
src/3-4-mid_summary/: main.cpp
src/4-1-depth_testing/: main.cpp
src/4-2-stencil_testing/: main.cpp
src/4-3-blend_testing/: main.cpp
src/4-4-face_culling/: main.cpp
src/4-5-frame_buffer/: main.cpp
src/4-6-cubemaps/: main.cpp
(+81 files in other folders)
